[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "privacy-guard-agent"
version = "0.1.0"
description = "An RL environment for PII Redaction"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core"
]

[project.scripts]
server = "server.app:main"  # <--- Crucial: must end in :main

[tool.setuptools]
packages = ["server"]
py-modules = ["env", "models"]